[package]
name = "fbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.11.0"
minifb = "0.25.0"
raqote = "0.8.3"
winit = "0.28.6"
rand = "0.8.4"
autopilot = "0.4.0"
enigo = "0.1.3"
image = "0.24.7"
pixels = "0.7"